0028114: Visualization, Path tracing - Make path tracing mode interactive in high resolutions